Fix overflow for body container

--- a/media/pinax/css/base.css
+++ b/media/pinax/css/base.css
@@ -40,6 +40,7 @@ td {
     width: 1000px;
     border-left: 2px solid silver;
     background: white;
+    overflow: auto;
 }
 #footer {
     color: #999; /* footer text colour */
